--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.7",
     "imap-simple": "^5.1.0",
     "lucide-react": "^0.482.0",
+    "mailparser": "^3.7.2",
     "next": "15.2.2",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.10.0",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/imap-simple": "^4.2.9",
+    "@types/mailparser": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
